# Fire-Watch-App

./: .clang-format  .eslintrc.js  .gitignore  001_add_language.sql  004_language_compliance.sql  20260315_fts_extinguishers.sql  20260316_user_ops.sql  Admin.cpp  Admin.h  AdminRoutes.cpp  AdminRoutes.h  ApiClient.cpp  ApiClient.h  ApiRoutes.json  App.tsx  AppContext.tsx  AppRoot.tsx  AuthRoutes.cpp  AuthRoutes.h  CMakeLists.addon.txt  CMakeLists.txt  Crypto.cpp  Crypto.h  DashboardWindow.cpp  DashboardWindow.h  Dockerfile  EditUserDialog.cpp  FireWatch.db  FireWatch.sqbpro  GitHub_Actions_Badges.md  InactivityMonitor.cpp  InactivityMonitor.h  InspectorToolsWindow.cpp  InspectorToolsWindow.h  Inv.cpp  Inv.h  JWTService.h  LANGUAGE_COMPLIANCE_CHECKLIST.md  LICENSE  LandingScreen.tsx  (+138 more)
.github/w.github/workflows/: firewatch-starter-zip.yml
.github/workflows/: build-auth-zip.yml  firewatch-ci.yml  main.yml
docs/erd/: FireWatch_UML_Diagrams.md  README.md
src/backend/: Admin.cpp  Admin.h  Assignment.cpp  Assignment.h  Inv.cpp  Inv.h  Investigator.cpp  ThirdPAdmin.cpp  ThirdPAdmin.h  ThirdPInv.cpp  ThirdPInv.h  ThirdPartyAdmin  ThirdPartyAdmin.cpp  ThirdPartyInvestigator  ThirdPartyInvestigator.cpp  User  User.cpp  User.h  main.cpp
src/database/: FireWatch.db
src/frontend/: README.md
src/frontend/Fire-Watch-UI/: CMakeLists.txt  DueDateAlert.h  FireWatch_Code_Notes.txt  adduserdialog.h  assigndialog.h  dashboard.cpp  dashboard.h  dashboard.html  dashboard.ui  edituserdialog.h  exportdialog.h  extdialog.cpp  extdialog.h  index.html  mainwindow.cpp  mainwindow.h  mainwindow.ui  reportdialog.h  styles.json
src/frontend/FireWatch-iOS/: FireWatchApp.swift  iOS app code notes.txt
