cmake_minimum_required(VERSION 3.10)
project(umlgen LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(umlgen src/umlgen.cpp)
cmake_minimum_required(VERSION 3.19)
project(Fire-Watch-UI LANGUAGES CXX)

cmake_minimum_required(VERSION 3.10)
project(SearchProject)
set(CMAKE_CXX_STANDARD 17)
find_package(Qt6 COMPONENTS Widgets REQUIRED)
find_package(SQLite3 REQUIRED)
include_directories(src gui)
add_executable(SearchConsole src/main.cpp src/search_bar_db.cpp src/fuzzy.cpp src/query_parser.cpp)
target_link_libraries(SearchConsole SQLite::SQLite3)
add_executable(SearchGUI gui/main_gui.cpp gui/SearchWindow.cpp src/search_bar_db.cpp src/fuzzy.cpp src/query_parser.cpp)
target_link_libraries(SearchGUI Qt6::Widgets SQLite::SQLite3)
